WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213157
[Mac Catalyst] Color inputs and selects fail to display popovers when clicked
https://bugs.webkit.org/show_bug.cgi?id=213157
Summary
[Mac Catalyst] Color inputs and selects fail to display popovers when clicked
Wenson Hsieh
Reported
2020-06-12 17:06:49 PDT
<
rdar://problem/64004135
>
Attachments
Patch
(2.83 KB, patch)
2020-06-13 00:51 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2020-06-13 00:51:42 PDT
Created
attachment 401828
[details]
Patch
Tim Horton
Comment 2
2020-06-13 01:17:23 PDT
Comment on
attachment 401828
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=401828&action=review
> Source/WebKit/ChangeLog:9 > + In Mac Catalyst, presenting popovers using `UIPopoverController` causes the first responder to change. This
Not totally clear why presenting a popover on iOS doesn't also cause the first responder to change, but ... OK?
Wenson Hsieh
Comment 3
2020-06-13 11:00:26 PDT
(In reply to Tim Horton from
comment #2
)
> Comment on
attachment 401828
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=401828&action=review
> > > Source/WebKit/ChangeLog:9 > > + In Mac Catalyst, presenting popovers using `UIPopoverController` causes the first responder to change. This > > Not totally clear why presenting a popover on iOS doesn't also cause the > first responder to change, but ... OK?
It looks like it's pretty much due to UIKit implementation details. On Mac Catalyst, _UIPopoverSceneManager is used to present popovers, which resigns first responder underneath -createPopoverSceneForContentViewController:sourceView:sourceRectInParentUIWindow:contentSize:permittedArrowDirections:showsArrow:userInterfaceStyle:withCompletionBlock:]. This codepath isn't taken on iOS and iPadOS.
EWS
Comment 4
2020-06-13 11:14:19 PDT
Committed
r263001
: <
https://trac.webkit.org/changeset/263001
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 401828
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug